--- a/templates/home/contact.html.twig
+++ b/templates/home/contact.html.twig
@@ -14,8 +14,8 @@
     <!--================Contact Area =================-->
     <section class="contact_area section_gap_bottom">
         <div class="container">
-            <div id="mapBox" class="mapBox" data-lat="40.701083" data-lon="-74.1522848" data-zoom="13" data-info="PO Box CT16122 Collins Street West, Victoria 8007, Australia."
-                 data-mlat="40.701083" data-mlon="-74.1522848">
+            <div id="mapBox" class="mapBox" data-lat="36.8322038" data-lon="10.2165025" data-zoom="13" data-info="Université Centrale (Ecole IT)."
+                 data-mlat="36.8322038" data-mlon="10.2165025">
             </div>
             <div class="row">
                 <div class="col-lg-3">
