--- a/templates/article/show.html.twig
+++ b/templates/article/show.html.twig
@@ -19,7 +19,7 @@
                 <div class="row s_product_inner">
                     <div class="col-lg-6">
                             <div class="single-prd-item">
-                                <img style="width: 450px;height: 450px" class="img-fluid" src="uploads/{{ article.image }}">
+                                <img style="width: 450px;height: 450px" class="img-fluid" src="/uploads/{{ article.image }}">
                             </div>
                     </div>
                     <div class="col-lg-5 offset-lg-1">
