--- a/templates/article/show.html.twig
+++ b/templates/article/show.html.twig
@@ -176,7 +176,7 @@
                                     <br>
                                     <input id="inp" type="text" value="" hidden>
                                     <div class="col-md-12">
-                                        {{ form_start(reviews,{'attr' : {'id' : 'myform'}}) }}
+                                        {{ form_start(reviews) }}
                                         <div class="form-group">
                                                 {{ form_row(reviews.content,  {'label' : false,'attr' : {'placeholder' : "Review",'class' : 'form-control'}}) }}
                                             </div>
