--- a/templates/order/order.html.twig
+++ b/templates/order/order.html.twig
@@ -78,7 +78,7 @@
                     </table>
                     {% if commande.status == "Completed" %}
                     {{ form_start(form) }}
-                    {{ form_row(form,{'label' : false,'attr' : {'class' : 'btn btn-danger'}}) }}
+                    {{ form_row(form.submit) }}
                     {{ form_end(form) }}
                     {% else %}
 
