--- a/templates/baseAdmin.html.twig
+++ b/templates/baseAdmin.html.twig
@@ -23,6 +23,10 @@
 
     <!-- Custom styles for this template-->
     <link href="{{ asset('css/sb-admin.css') }}" rel="stylesheet">
+
+    <!-- Custom styles for this template-->
+    <link href="{{ asset('css/sb-admin-2.min.css') }}" rel="stylesheet">
+
     {% block stylesheets %}
     {% endblock %}
 
@@ -151,6 +155,7 @@
 
 <!-- Custom scripts for all pages-->
 <script src="{{ asset('js/sb-admin.min.js') }}"></script>
+
 {% block javascripts %}
 {% endblock %}
 </body>
