--- a/templates/admin/user/index.html.twig
+++ b/templates/admin/user/index.html.twig
@@ -36,6 +36,6 @@
     </table>
     <a href="{{ path('user_new') }}" class="btn btn-primary">Create new</a>
     <div class="pagination active">
-        {{ knp_pagination_render(articles) }}
+        {{ knp_pagination_render(users) }}
     </div>
 {% endblock %}
