--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -117,7 +117,7 @@
                         <p>Aucun produit !</p>
                     {% endif %}
                 </div>
-                <div class="pagination">
+                <div class="pagination active">
                     {{ knp_pagination_render(articles) }}
                 </div>
 
@@ -128,12 +128,5 @@
 
     </div>
 
-
-
-
-
 {% endblock %}
 
-{% block javascripts %}
-
-{% endblock %}
