--- a/templates/home/account.html.twig
+++ b/templates/home/account.html.twig
@@ -60,6 +60,12 @@
                                         </div>
                                     </div>
                                     <div class="form-group row">
+                                        <label for="country" class="col-4 col-form-label">Country</label>
+                                        <div class="col-8">
+                                            <input id="country" name="country" placeholder="Country" class="form-control here" value="{{ client.country }}" required="required" type="text" disabled>
+                                        </div>
+                                    </div>
+                                    <div class="form-group row">
                                         <label for="city" class="col-4 col-form-label">City</label>
                                         <div class="col-8">
                                             <input id="city" name="city" placeholder="City" class="form-control here" value="{{ client.city }}" required="required" type="text" disabled>
