--- a/templates/admin/user/index.html.twig
+++ b/templates/admin/user/index.html.twig
@@ -4,8 +4,8 @@
 
 {% block body %}
     <h1>Users List</h1>
-
-    <table class="table">
+    <label>Search name:<input type="search" onkeyup="myFunction()" name="searchtable" id="searchtable" class="form-control form-control-sm search" placeholder="" aria-controls="dataTable"></label>
+    <table class="table" id="dataTable">
         <thead>
             <tr>
                 <th>Id</th>
@@ -21,10 +21,20 @@
                 <td>{{ user.id }}</td>
                 <td>{{ user.loginName }}</td>
                 <td>{{ user.email }}</td>
-                <td>{{ user.roles ? user.roles|json_encode : '' }}</td>
                 <td>
+                    {% if user.roles  == ["ROLE_USER"] %}
+                        User
+                    {% elseif user.roles  == ["ROLE_SUPER_ADMIN","ROLE_USER"] %}
+                        Super Admin
+                    {% elseif user.roles  == ["ROLE_ADMIN","ROLE_USER"] %}
+                        Admin
+                    {% endif %}
+                </td>
+                <td>
+                    {% if user.roles  != ["ROLE_SUPER_ADMIN","ROLE_USER"] %}
                     <a href="{{ path('user_show', {'id': user.id}) }}" class="btn btn-primary">show</a>
                     <a href="{{ path('user_edit', {'id': user.id}) }}" class="btn btn-primary">edit</a>
+                    {% endif %}
                 </td>
             </tr>
         {% else %}
@@ -38,4 +48,30 @@
     <div class="pagination active">
         {{ knp_pagination_render(users) }}
     </div>
+{% endblock %}
+
+{% block javascripts %}
+    <script>
+        function myFunction() {
+            // Declare variables
+            var input, filter, table, tr, td, i, txtValue;
+            input = document.getElementById("searchtable");
+            filter = input.value.toUpperCase();
+            table = document.getElementById("dataTable");
+            tr = table.getElementsByTagName("tr");
+
+            // Loop through all table rows, and hide those who don't match the search query
+            for (i = 0; i < tr.length; i++) {
+                td = tr[i].getElementsByTagName("td")[1];
+                if (td) {
+                    txtValue = td.textContent || td.innerText;
+                    if (txtValue.toUpperCase().indexOf(filter) > -1) {
+                        tr[i].style.display = "";
+                    } else {
+                        tr[i].style.display = "none";
+                    }
+                }
+            }
+        }
+    </script>
 {% endblock %}
